umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_clean-structure.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 31"
extended_molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 31"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: "C23N*[L]"
    atom_count: 26
    bond_count: 26
    extended_atoms: 2
    extended_bonds: 4
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
