umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_cml-1948-R-group.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 63"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 63"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: "C52FNOS+2*[L]2R2"
    atom_count: 61
    bond_count: 60
    extended_atoms: 5
    extended_bonds: 9
    property_count: 1
    rgroup_count: 0
    sgroup_count: 2
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: "C52FNOS+2*[L]2R2"
    atom_count: 61
    bond_count: 60
    extended_atoms: 5
    extended_bonds: 9
    property_count: 1
    rgroup_count: 0
    sgroup_count: 2
