umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_different-features.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 23, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 23, col 31"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C37FNOS+2R2
    atom_count: 43
    bond_count: 42
    extended_atoms: 2
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 1
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C37FNOS+2R2
    atom_count: 43
    bond_count: 42
    extended_atoms: 2
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 1
